# strawberry-django-test

./: pyproject.toml  setup.cfg
main/: schema.py  settings.py  type_check.py  urls.py  views.py
polls/: models.py
polls/migrations/: 0001_initial.py
