[tool.poetry]
name = "strawberry-django-test"
version = "0.1.0"
description = ""
authors = ["Jonathan Kim <jkimbo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"
strawberry-graphql = { path = "../strawberry/", develop = true }
pytz = "^2020.1"
pydantic = "^1.6.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"
flake8-bugbear = "^20.1.4"
flake8-black = "^0.2.1"
pdbpp = "^0.10.2"
pytest = "^6.0.1"
pytest-django = "^3.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
